
AM_CXXFLAGS=-O3 -Wall -lz
#AM_CXXFLAGS=-g -DDEBUG -lz -Wall

bin_PROGRAMS = Ray-SimulateFragments Ray-SimulateErrors Ray-SimulatePairedReads Ray

Ray_SOURCES =  \
PendingRequest.h RingAllocator.cpp RingAllocator.h StaticVector.cpp StaticVector.h \
MessagesHandler.h MessagesHandler.cpp \
slave_modes.h master_modes.h mpi_tags.h \
SeedingData.h \
Library.h Library.cpp \
FastqGzLoader.h \
FastqGzLoader.cpp \
FastaLoader.h \
FastaLoader.cpp \
FastqLoader.h \
FastqLoader.cpp \
BubbleData.h \
BubbleTool.cpp \
BubbleTool.h \
BufferedData.cpp \
BufferedData.h \
Chooser.cpp \
ChooserData.h \
Chooser.h \
ColorSpaceDecoder.cpp \
ColorSpaceDecoder.h \
ColorSpaceLoader.cpp \
ColorSpaceLoader.h \
common_functions.cpp \
common_functions.h \
config.h \
CoverageDistribution.cpp \
CoverageDistribution.h \
DepthFirstSearchData.h \
Direction.cpp \
Direction.h \
DistributionData.cpp \
DistributionData.h \
EdgesExtractor.cpp \
EdgesExtractor.h \
ErrorSimulator.cpp \
ErrorSimulator.h \
ExtensionData.h \
FusionData.h \
FusionData.cpp \
Loader.cpp \
Loader.h \
Machine.cpp \
Machine.h \
Message.cpp \
Message.h \
MessageProcessor.cpp \
MessageProcessor.h \
MyAllocator.cpp \
MyAllocator.h \
MyForest.cpp \
MyForest.h \
OpenAssemblerChooser.cpp \
OpenAssemblerChooser.h \
PairedRead.cpp \
PairedRead.h \
Parameters.cpp \
Parameters.h \
ray_main.cpp \
ReadAnnotation.cpp \
ReadAnnotation.h \
Read.cpp \
Read.h \
RepeatedVertexWatchdog.cpp \
RepeatedVertexWatchdog.h \
SeedExtender.cpp \
SeedExtender.h \
SequencesIndexer.cpp \
SequencesIndexer.h \
SequencesLoader.cpp \
SequencesLoader.h \
SffLoader.cpp \
SffLoader.h \
SplayNode.h \
SplayTree.h \
SplayTreeIterator.h \
TimePrinter.cpp \
TimePrinter.h \
TipWatchdog.cpp \
TipWatchdog.h \
Vertex.cpp \
Vertex.h \
VertexLinkedList.cpp \
VertexLinkedList.h \
VerticesExtractor.cpp \
VerticesExtractor.h 


Ray_SimulateFragments_SOURCES = \
 PendingRequest.h RingAllocator.cpp RingAllocator.h  StaticVector.cpp StaticVector.h \
MessagesHandler.h MessagesHandler.cpp \
Library.h Library.cpp \
slave_modes.h master_modes.h mpi_tags.h \
FastqGzLoader.h \
FastqGzLoader.cpp \
FastqLoader.h \
FastqLoader.cpp \
FastaLoader.h \
FastaLoader.cpp \
BubbleData.h \
BubbleTool.cpp \
BubbleTool.h \
BufferedData.cpp \
BufferedData.h \
Chooser.cpp \
ChooserData.h \
Chooser.h \
ColorSpaceDecoder.cpp \
ColorSpaceDecoder.h \
ColorSpaceLoader.cpp \
ColorSpaceLoader.h \
common_functions.cpp \
common_functions.h \
config.h \
CoverageDistribution.cpp \
CoverageDistribution.h \
DepthFirstSearchData.h \
Direction.cpp \
Direction.h \
DistributionData.cpp \
DistributionData.h \
EdgesExtractor.cpp \
EdgesExtractor.h \
ErrorSimulator.cpp \
ErrorSimulator.h \
ExtensionData.h \
FusionData.h \
FusionData.cpp \
Loader.cpp \
Loader.h \
Machine.cpp \
Machine.h \
Message.cpp \
Message.h \
MessageProcessor.cpp \
MessageProcessor.h \
MyAllocator.cpp \
MyAllocator.h \
MyForest.cpp \
MyForest.h \
OpenAssemblerChooser.cpp \
OpenAssemblerChooser.h \
PairedRead.cpp \
PairedRead.h \
Parameters.cpp \
Parameters.h \
ReadAnnotation.cpp \
ReadAnnotation.h \
Read.cpp \
Read.h \
RepeatedVertexWatchdog.cpp \
RepeatedVertexWatchdog.h \
SeedExtender.cpp \
SeedExtender.h \
SequencesIndexer.cpp \
SequencesIndexer.h \
SequencesLoader.cpp \
SequencesLoader.h \
SffLoader.cpp \
SffLoader.h \
simulate_fragments_main.cpp \
SplayNode.h \
SplayTree.h \
SplayTreeIterator.h \
TimePrinter.cpp \
TimePrinter.h \
TipWatchdog.cpp \
TipWatchdog.h \
Vertex.cpp \
Vertex.h \
VertexLinkedList.cpp \
VertexLinkedList.h \
VerticesExtractor.cpp \
VerticesExtractor.h 

Ray_SimulateErrors_SOURCES = \
 PendingRequest.h RingAllocator.cpp RingAllocator.h  StaticVector.cpp StaticVector.h \
Library.h Library.cpp \
MessagesHandler.h MessagesHandler.cpp \
slave_modes.h master_modes.h mpi_tags.h \
FastqGzLoader.h \
FastqGzLoader.cpp \
FastqLoader.h \
FastqLoader.cpp \
FastaLoader.h \
FastaLoader.cpp \
BubbleData.h \
BubbleTool.cpp \
BubbleTool.h \
BufferedData.cpp \
BufferedData.h \
Chooser.cpp \
ChooserData.h \
Chooser.h \
ColorSpaceDecoder.cpp \
ColorSpaceDecoder.h \
ColorSpaceLoader.cpp \
ColorSpaceLoader.h \
common_functions.cpp \
common_functions.h \
config.h \
CoverageDistribution.cpp \
CoverageDistribution.h \
DepthFirstSearchData.h \
Direction.cpp \
Direction.h \
DistributionData.cpp \
DistributionData.h \
EdgesExtractor.cpp \
EdgesExtractor.h \
ErrorSimulator.cpp \
ErrorSimulator.h \
ExtensionData.h \
FusionData.h \
FusionData.cpp \
Loader.cpp \
Loader.h \
Machine.cpp \
Machine.h \
Message.cpp \
Message.h \
MessageProcessor.cpp \
MessageProcessor.h \
MyAllocator.cpp \
MyAllocator.h \
MyForest.cpp \
MyForest.h \
OpenAssemblerChooser.cpp \
OpenAssemblerChooser.h \
PairedRead.cpp \
PairedRead.h \
Parameters.cpp \
Parameters.h \
ReadAnnotation.cpp \
ReadAnnotation.h \
Read.cpp \
Read.h \
RepeatedVertexWatchdog.cpp \
RepeatedVertexWatchdog.h \
SeedExtender.cpp \
SeedExtender.h \
SequencesIndexer.cpp \
SequencesIndexer.h \
SequencesLoader.cpp \
SequencesLoader.h \
SffLoader.cpp \
SffLoader.h \
simulateErrors_main.cpp \
SplayNode.h \
SplayTree.h \
SplayTreeIterator.h \
TimePrinter.cpp \
TimePrinter.h \
TipWatchdog.cpp \
TipWatchdog.h \
Vertex.cpp \
Vertex.h \
VertexLinkedList.cpp \
VertexLinkedList.h \
VerticesExtractor.cpp \
VerticesExtractor.h 

Ray_SimulatePairedReads_SOURCES = \
 PendingRequest.h RingAllocator.cpp RingAllocator.h StaticVector.cpp StaticVector.h \
MessagesHandler.h MessagesHandler.cpp \
slave_modes.h master_modes.h mpi_tags.h \
FastqGzLoader.h \
Library.h Library.cpp \
FastqGzLoader.cpp \
FastqLoader.h \
FastqLoader.cpp \
FastaLoader.h \
FastaLoader.cpp \
BubbleData.h \
BubbleTool.cpp \
BubbleTool.h \
BufferedData.cpp \
BufferedData.h \
Chooser.cpp \
ChooserData.h \
Chooser.h \
ColorSpaceDecoder.cpp \
ColorSpaceDecoder.h \
ColorSpaceLoader.cpp \
ColorSpaceLoader.h \
common_functions.cpp \
common_functions.h \
config.h \
CoverageDistribution.cpp \
CoverageDistribution.h \
DepthFirstSearchData.h \
Direction.cpp \
Direction.h \
DistributionData.cpp \
DistributionData.h \
EdgesExtractor.cpp \
EdgesExtractor.h \
ErrorSimulator.cpp \
ErrorSimulator.h \
ExtensionData.h \
FusionData.h \
FusionData.cpp \
Loader.cpp \
Loader.h \
Machine.cpp \
Machine.h \
Message.cpp \
Message.h \
MessageProcessor.cpp \
MessageProcessor.h \
MyAllocator.cpp \
MyAllocator.h \
MyForest.cpp \
MyForest.h \
OpenAssemblerChooser.cpp \
OpenAssemblerChooser.h \
PairedRead.cpp \
PairedRead.h \
Parameters.cpp \
Parameters.h \
ReadAnnotation.cpp \
ReadAnnotation.h \
Read.cpp \
Read.h \
RepeatedVertexWatchdog.cpp \
RepeatedVertexWatchdog.h \
SeedExtender.cpp \
SeedExtender.h \
SequencesIndexer.cpp \
SequencesIndexer.h \
SequencesLoader.cpp \
SequencesLoader.h \
SffLoader.cpp \
SffLoader.h \
simulate_paired_main.cpp \
SplayNode.h \
SplayTree.h \
SplayTreeIterator.h \
TimePrinter.cpp \
TimePrinter.h \
TipWatchdog.cpp \
TipWatchdog.h \
Vertex.cpp \
Vertex.h \
VertexLinkedList.cpp \
VertexLinkedList.h \
VerticesExtractor.cpp \
VerticesExtractor.h 
