# primary Makefile.am
# Author: Sébastien Boisvert
# Centre de recherche en infectiologie, Université Laval
# Copyright 2010, or so


SUBDIRS = comparisons gnuplot examples
DIST_SUBDIRS = comparisons gnuplot examples
EXTRA_DIST = analyseQuality.sh coverage.py dump.pdfs.sh dump-results-html.sh \
dump-results.sh extract-error-rates.py filter-contigs.py generateSequence.rb \
integrate.py interleave-fasta.py interleave-fastq.py linux-clean-caches.sh \
mummer-validate.rb myco-test.sh optimize.py plot-dydx-coverage.R print-latex.sh \
qhost.py removeBreaks.py renameReads-for-euler.py run-all.sh run-script.sh \
saet.sh sets.txt


