# primary Makefile.am
# Author: Sébastien Boisvert
# Centre de recherche en infectiologie, Université Laval
# Copyright 2010, or so


EXTRA_DIST = 0mix11-abyss.sh \
0mix11-euler-sr.sh \
0mix11-newbler.sh \
0mix11-parameters.sh \
0mix11-ray.sh \
0mix11-velvet.sh \
0mix12-abyss.sh \
0mix12-euler-sr.sh \
0mix12-newbler.sh \
0mix12-ray.sh \
0mix12-velvet.sh \
0mix13-abyss.sh \
0mix13-euler-sr.sh \
0mix13-newbler.sh \
0mix13-parameters.sh \
0mix13-ray.sh \
0mix13-velvet.sh \
0mix14-abyss.sh \
0mix14-euler-sr.sh \
0mix14-newbler.sh \
0mix14-ray.sh \
0mix14-velvet.sh \
0mix21-abyss.sh \
0mix21-euler-sr.sh \
0mix21-newbler.sh \
0mix21-ray.sh \
0mix21-velvet.sh \
0mix22-abyss.sh \
0mix22-euler-sr.sh \
0mix22-newbler.sh \
0mix22-ray.sh \
0mix22-velvet.sh \
0mix23-abyss.sh \
0mix23-euler-sr.sh \
0mix23-newbler.sh \
0mix23-ray.sh \
0mix23-velvet.sh \
0mix2-parameters.sh \
0mix31-abyss.sh \
0mix31-euler-sr.sh \
0mix31-newbler.sh \
0mix31-parameters.sh \
0mix31-ray.sh \
0mix31-velvet.sh \
0mix32-abyss.sh \
0mix32-euler-sr.sh \
0mix32-newbler.sh \
0mix32-parameters.sh \
0mix32-ray.sh \
0mix32-velvet.sh \
0mix33-abyss.sh \
0mix33-euler-sr.sh \
0mix33-newbler.sh \
0mix33-parameters.sh \
0mix33-ray.sh \
0mix33-velvet.sh \
0parameters.sh \
0short1-abyss.sh \
0short1-euler-sr.sh \
0short1-newbler.sh \
0short1-parameters.sh \
0short1-ray.sh \
0short1-velvet.sh \
0short2-abyss.sh \
0short2-euler-sr.sh \
0short2-newbler.sh \
0short2-ray.sh \
0short2-velvet.sh \
0short3-abyss.sh \
0short3-euler-sr.sh \
0short3-newbler.sh \
0short3-parameters.sh \
0short3-ray.sh \
0short3-velvet.sh \
0sim1-abyss.sh \
0sim1-euler-sr.sh \
0sim1-newbler.sh \
0sim1-parameters.sh \
0sim1-ray.sh \
0sim1-velvet.sh \
0sim2-abyss.sh \
0sim2-euler-sr.sh \
0sim2-newbler.sh \
0sim2-parameters.sh \
0sim2-ray.sh \
0sim2-velvet.sh \
0sim3-abyss.sh \
0sim3-euler-sr.sh \
0sim3-newbler.sh \
0sim3-parameters.sh \
0sim3-ray.sh \
0sim3-velvet.sh \
0sim4-abyss.sh \
0sim4-euler-sr.sh \
0sim4-newbler.sh \
0sim4-parameters.sh \
0sim4-ray.sh \
0sim4-velvet.sh \
0sim5-abyss.sh \
0sim5-euler-sr.sh \
0sim5-newbler.sh \
0sim5-parameters.sh \
0sim5-ray.sh \
0sim5-velvet.sh \
0sim6-abyss.sh \
0sim6-euler-sr.sh \
0sim6-newbler.sh \
0sim6-ray.sh \
0sim6-velvet.sh \
0sim7-abyss.sh \
0sim7-euler-sr.sh \
0sim7-newbler.sh \
0sim7-ray.sh \
0sim7-velvet.sh \
0sim8-abyss.sh \
0sim8-euler-sr.sh \
0sim8-newbler.sh \
0sim8-parameters.sh \
0sim8-ray.sh \
0sim8-velvet.sh 
