# primary Makefile.am
# Author: Sébastien Boisvert
# Centre de recherche en infectiologie, Université Laval
# Copyright 2010, or so


EXTRA_DIST = coli-mpich2-gz.sh \
coli-mpich2.sh \
coli-openmpi.sh \
Human-chr1-ompi-1.3.4-gcc.sh \
run-chr1-human.sh \
run-coli.sh \
strept-mpich2-bz2.sh \
strept-openmpi-bz2.sh \
strept-openmpi.sh 
