mpich2dir = $(docdir)/scripts/examples/mpich2

dist_mpich2_DATA = coli-mpich2-gz.sh \
coli-mpich2-interleaved-bz2.sh \
coli-mpich2-interleaved.sh \
coli-mpich2.sh \
listRegressions.sh \
pseudomonas-interleaved-bz2.sh \
pseudomonas-p-bz2-gz.sh \
pseudomonas-p-mpich2.sh \
pseudomonas-p.sh \
pseudomonas-s-mpich2.sh \
runRegression.sh \
runRegressions.sh \
strept-mpich2-200.sh \
strept-mpich2-bz2.sh \
strept-mpich2-interleaved-bz2.sh \
strept-mpich2-interleaved.sh \
strept-mpich2.sh 

